possibility to read .ini files has been added db.ini and wordpress.ini configs have been added

--- a/migbash.cfg
+++ b/migbash.cfg
@@ -6,7 +6,7 @@
 # --help() - shows common info about provided module
 # e.g.: ./migbash.sh db --help
 --help() {
-    for MODULE in $(ls ${migbash_modules_path}${module} | grep -vE '*\.cfg')
+    for MODULE in $(ls ${migbash_modules_path}${module} | grep -vE '*\.cfg|*\.ini')
     do
         ${MODULE}_help
     done
