colors support has been added; margin method has been added; also new method MigBash::getVal() has been added(retrieve values from config files); help methods for every module have been updated;

--- a/modules/wp/wordpress.ini
+++ b/modules/wp/wordpress.ini
@@ -1,6 +1,6 @@
 [database]
-db_user=root
-db_pass=ak3a18l
+db_user=user
+db_pass=pass
 db_host=127.0.0.1
-db_name=wordpress
+db_name=database
 db_port=3306
