--- a/modules/db/db.ini
+++ b/modules/db/db.ini
@@ -1,6 +1,6 @@
 [backup]
-db_user=root
-db_pass=ak3a18l
+db_user=user
+db_pass=pass
 db_host=127.0.0.1
 db_port=3306
-path=/home/ray/develop/projects/TMP/
+path=/home/path/to/smth/
