migbash options: -h (to show common info) and -m (to show info about modules and their functions) have been added; method MigBash::modules has been added --help method  - little change

--- a/migbash.cfg
+++ b/migbash.cfg
@@ -1,14 +1,27 @@
 # MigBash config file
 # Author: Alexander Kovalev
-# Dec. 16, 2013 (last updated 12/16/2013)
+# Dec. 16, 2013 (last updated 01/04/2014)
 # ------------------------------------------------------
 
 # --help() - shows common info about provided module
 # e.g.: ./migbash.sh db --help
 --help() {
-    for MODULE in $(ls ${migbash_modules_path}${module} | grep -vE '*\.cfg|*\.ini')
+    for MODULE in $(ls ${migbash_modules_path}${module} | grep -vE '*\.cfg|*\.ini|functions')
     do
         ${MODULE}_help
     done
     echo
+}
+
+MigBash::modules() {
+    for MODULE_FOLDER in $(ls ${migbash_modules_path} | grep -vE '*\.cfg|*\.ini')
+    do
+        echo "Module: $(MigBash::color ${MODULE_FOLDER} yellow black)"
+        for MODULE in $(ls ${migbash_modules_path}${MODULE_FOLDER} | grep -vE '*\.cfg|*\.ini|functions')
+        do
+            . ${migbash_modules_path}${MODULE_FOLDER}/${MODULE}
+            echo $(tput hpa 7)$(${MODULE}_help)
+        done
+        echo
+    done
 }
